--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/ReactToastify.css">
-    <title>BazGame | معرفی جدیدترین بازی های جهان</title>
+    <title>bazgame/معرفی برترین بازی های جهان</title>
 </head>
 <body>
 <noscript>مرورگر شما از جاوااسکریپت پشتیبانی نمی کند</noscript>
